# LocaLLM

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json
src/: App.tsx  messageContent.tsx  models.ts  pdfjs.d.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
